--- a/NetCoreCMS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using NetCoreCMS.Models
+@using NetCoreCMS.Web.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
