--- a/NetCoreCMS.Web/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using NetCoreCMS
-@using NetCoreCMS.Models
-@using NetCoreCMS.Models.AccountViewModels
-@using NetCoreCMS.Models.ManageViewModels
+﻿@using NetCoreCMS.Web
+@using NetCoreCMS.Web.Models
+@using NetCoreCMS.Web.Models.AccountViewModels
+@using NetCoreCMS.Web.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
