Theme concept is added.

--- a/NetCoreCMS.Web/Themes/NetCoreCMS.Theme.Default/Frontend/Shared/_FrontendLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NetCoreCMS.Theme.Default/Frontend/Shared/_FrontendLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NetCoreCMS.Web</title>
+    <title>@ViewData["Title"] - NetCoreCMS Frontend</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -19,7 +19,7 @@
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,13 +28,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">NetCoreCMS.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">NetCoreCMS Frontend</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="CmsHome" asp-action="Index">CmsHome</a></li>
+                    <li><a asp-area="" asp-controller="HelloHome" asp-action="Index">Hello World</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
