renamed theme path

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    Layout = "_FrontendLayout";
+﻿@using NetCoreCMS.Framework.Utility
+@{
+    Layout = Constants.SiteLayoutName;
 }
 
 <h1> Holaaaaaaaaa </h1>
