--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/HelloHome/index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    Layout = "_BackendLayout";
+﻿@using NetCoreCMS.Framework.Utility
+@{
+    Layout = Constants.AdminLayoutName;
 }
 
 <h1> Holaaaaaaaaa !!! It's Backend</h1>
