SQLite database create is complete.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
@@ -164,7 +164,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="text-muted text-center">Developed by <a href="http://xonaki.com" title="xonaki.com" target="_blank">xonaki.com</a>.</p>
+            <p class="text-muted text-center">Developed by <a href="@NccInfo.Website" title="@NccInfo.Author" target="_blank">@NccInfo.Author</a>.</p>
         </div>
     </footer>
 </body>
