--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using NetCoreCMS.Modules.Setup.Models.ViewModels
+﻿@using NetCoreCMS.Framework.Core
+@using NetCoreCMS.Modules.Setup.Models.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
