--- a/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
@@ -60,10 +60,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="CmsHome" asp-action="Index">CmsHome</a></li>
+                    <li><a asp-area="" asp-controller="CmsHome" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="CmsHome" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="CmsHome" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="HelloHome" asp-action="Index">Hello World</a></li>
                     
                 </ul>
