--- a/NetCoreCMS.Web/Views/Shared/_LoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_LoginPartial.cshtml
@@ -20,6 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li><a asp-area="" asp-controller="Home" asp-action="Index">Settings</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
