--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NetCoreCMS Backend</title>
+    <title>@ViewData["Title"] - NetCoreCMS Setup</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -70,6 +70,28 @@
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="SiteName" name="SiteName" asp-for="SiteName" placeholder="Enter Site Name">
                     <span asp-validation-for="SiteName" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="Slogan">Slogan:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="Slogan" name="Slogan" asp-for="Slogan" placeholder="Enter Slogan">
+                    <span asp-validation-for="Slogan" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="SetupTemplate">Website Template:</label>
+                <div class="col-sm-10">
+                    <select asp-for="SetupTemplate" type="text" class="form-control" id="SetupTemplate" name="SetupTemplate">
+                        <option value="">Select your template</option>
+                        <option value="Basic">Basic</option>
+                        <option value="Blog">Blog</option>
+                        <option value="PersonalProfile">Personal Profile</option>
+                        <option value="CompanyWebsite">Company Website</option>
+                        <option value="CRM">CRM</option>
+                        <option value="EcommarceSite">Ecommarce Site</option>
+                    </select>
+                    <span asp-validation-for="SetupTemplate" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
