new admin sidebar

--- a/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
@@ -46,6 +46,7 @@
     </environment>
 
     <link href="/Theme/Admin/Default/css/themeStyle.css" rel="stylesheet" />
+    <link href="/Theme/Admin/Default/css/sidebar.css" rel="stylesheet" />
     @*<script src="/NetCoreCMS.Modules.Setup/js/Setup.js"></script>*@
 
 </head>
@@ -69,24 +70,83 @@
                     <li><a asp-area="" asp-controller="HelloHome" asp-action="Index">Hello World</a></li>
                     
                 </ul>*@
-                @await Html.PartialAsync("_LoginPartial")
+                @*@await Html.PartialAsync("_LoginPartial")*@
             </div>
         </div>
     </nav>
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
+        <nav class="navbar navbar-inverse sidebar" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                @*<div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Brand</a>
+                </div>*@
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a asp-area="" asp-controller="CmsHome" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="CmsHome" asp-action="About">About</a></li>
+                        <li><a asp-area="" asp-controller="CmsHome" asp-action="Contact">Contact</a></li>
+                        <li><a asp-area="" asp-controller="HelloHome" asp-action="Index">Hello World</a></li>
+
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="#">Profile<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
+                        <li><a href="#">Messages<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-envelope"></span></a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                            <ul class="dropdown-menu forAnimate" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Home<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="#">Profile<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
+                        <li><a href="#">Messages<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-envelope"></span></a></li>
+                        <li class="dropdown open">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                            <ul class="dropdown-menu forAnimate" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    @await Html.PartialAsync("_LoginPartial")
+                </div>
+            </div>
+        </nav>
+        @*<div class="col-sm-3 col-md-2 sidebar">
+            
             <ul class="nav nav-sidebar">
-                @*<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Reports</a></li>
                 <li><a href="#">Analytics</a></li>
-                <li><a href="#">Export</a></li>*@
+                <li><a href="#">Export</a></li>
                 <li class="active"><a asp-area="" asp-controller="CmsHome" asp-action="Index">Home</a></li>
                 <li><a asp-area="" asp-controller="CmsHome" asp-action="About">About</a></li>
                 <li><a asp-area="" asp-controller="CmsHome" asp-action="Contact">Contact</a></li>
                 <li><a asp-area="" asp-controller="HelloHome" asp-action="Index">Hello World</a></li>
             </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        </div>*@
+        <div class="col-sm-12 main">
         @RenderBody()
         </div>
     </div>
@@ -96,7 +156,32 @@
             <p>&copy; 2017 - NetCoreCMS.Web</p>
         </footer>
     </div>
+    <script type="text/javascript">
+        function htmlbodyHeightUpdate() {
+            var height3 = $(window).height()
+            var height1 = $('.nav').height() + 50
+            height2 = $('.main').height()
+            if (height2 > height3) {
+                $('html').height(Math.max(height1, height3, height2) + 10);
+                $('body').height(Math.max(height1, height3, height2) + 10);
+            }
+            else {
+                $('html').height(Math.max(height1, height3, height2));
+                $('body').height(Math.max(height1, height3, height2));
+            }
 
+        }
+        $(document).ready(function () {
+            htmlbodyHeightUpdate()
+            $(window).resize(function () {
+                htmlbodyHeightUpdate()
+            });
+            $(window).scroll(function () {
+                height2 = $('.main').height()
+                htmlbodyHeightUpdate()
+            });
+        });
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
