--- a/NetCoreCMS.Web/Views/Account/Login.cshtml
+++ b/NetCoreCMS.Web/Views/Account/Login.cshtml
@@ -1,8 +1,13 @@
-﻿@using System.Collections.Generic
+﻿@using NetCoreCMS.Framework.Core.Models
+@using System.Collections.Generic
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Web
+@using NetCoreCMS.Web.Models.AccountViewModels
+
 @model LoginViewModel
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<NccUser> SignInManager
 
 @{
     ViewData["Title"] = "Log in";
