--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,10 @@
-﻿
+﻿@using NetCoreCMS.Web
+@using NetCoreCMS.Web.Models
+@using NetCoreCMS.Web.Models.AccountViewModels
+@using NetCoreCMS.Web.Models.ManageViewModels
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 @inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
