--- a/NetCoreCMS.Web/Themes/Site/Default/Shared/_LoginPartial.cshtml
+++ b/NetCoreCMS.Web/Themes/Site/Default/Shared/_LoginPartial.cshtml
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @using Microsoft.AspNetCore.Identity
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @inject SignInManager<NccUser> SignInManager
 @inject UserManager<NccUser> UserManager
