--- a/NetCoreCMS.Web/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using NetCoreCMS.Web.Models
 @using NetCoreCMS.Web.Models.AccountViewModels
 @using NetCoreCMS.Web.Models.ManageViewModels
+@using NetCoreCMS.Framework.Core
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
