Created settings and admin module.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using NetCoreCMS.Framework.Core
-@using NetCoreCMS.Modules.Setup.Models.ViewModels
+@using NetCoreCMS.Core.Modules.Setup.Models.ViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
