setup error fixed.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using NetCoreCMS.Modules.Setup.Models.ViewModels
+﻿@using NetCoreCMS.Core.Modules.Setup.Models.ViewModels
 @model SetupViewModel
 
 @{
