black changed to custom black

--- a/NetCoreCMS.Web/Themes/Admin/Default/wwwroot/css/themeStyle.css
+++ b/NetCoreCMS.Web/Themes/Admin/Default/wwwroot/css/themeStyle.css
@@ -13,6 +13,11 @@
     z-index: 10000;
 }
 
+.navbar-inverse {
+    background-color: #23282d !important;
+    border-color: #23282d !important;
+}
+
 /*
  * Main content
  */
