Small design update

--- a/NetCoreCMS.Web/Views/Home/SetupSuccess.cshtml
+++ b/NetCoreCMS.Web/Views/Home/SetupSuccess.cshtml
@@ -49,7 +49,7 @@
         <div class="page-header text-center">
             <h1>NetCoreCMS Setup Successful</h1>
             <hr />
-            <h4>Site need restart once. It will now autometically restart after 10 seconds.</h4>
+            <h2>Please restart and enjoy <strong>NetCoreCMC</strong></h2> 
         </div>       
         
     </div>
