--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Success.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/Success.cshtml
@@ -52,7 +52,7 @@
         <div class="page-header text-center">
             <h1>NetCoreCMS Setup Successful</h1>
             <hr />
-            <h1><a href="~/">Start here</a></h1> 
+            <h2>Please restart and enjoy <strong>NetCoreCMC</strong></h2> 
         </div>       
         
     </div>
