--- a/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Shared/_AdminLayout.cshtml
@@ -1,9 +1,11 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
-@using NetCoreCMS.Web
+﻿@using NetCoreCMS.Web
 @using NetCoreCMS.Web.Models
 @using NetCoreCMS.Web.Models.AccountViewModels
 @using NetCoreCMS.Web.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Framework.Utility
+
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -11,7 +13,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - NetCoreCMS Backend</title>
+    <title>@ViewData["Title"] - @GlobalConfig.WebSite.Name Admin Panel</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
