--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/CreateAdmin.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/Views/SetupHome/CreateAdmin.cshtml
@@ -73,10 +73,10 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-2" for="Slogan">Slogan:</label>
+                <label class="control-label col-sm-2" for="Tagline">Tagline:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="Slogan" name="Slogan" asp-for="Slogan" placeholder="Enter Slogan">
-                    <span asp-validation-for="Slogan" class="text-danger"></span>
+                    <input type="text" class="form-control" id="Tagline" name="Tagline" asp-for="Tagline" placeholder="Enter Tagline">
+                    <span asp-validation-for="Tagline" class="text-danger"></span>
                 </div>
             </div>
             
